color change less warnings

--- a/src/languages_de.properties
+++ b/src/languages_de.properties
@@ -1,4 +1,9 @@
+Column=Spalte
 Continue=Continue
-Main\ Menu=Mein NEin
+Grid\ Size=Tabelle
+Main\ Menu=Hauptmenü
 Pause=Pause
+Row=Reihe
 Score=Punkte
+Settings=Einstellungen
+Tile\ Size=Tile Grösse
