--- a/src/languages_it.properties
+++ b/src/languages_it.properties
@@ -1,4 +1,9 @@
+Column=Colonna
 Continue=Continua
+Grid\ Size=Dimensione Tabella
 Main\ Menu=Menu Principale
 Pause=Pausa
+Row=Riga
 Score=Punteggi
+Settings=Impostazioni
+Tile\ Size=Dimensioni Tile
